--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,2 +1,6 @@
-$base-font-size: 12px;
+$base-font-size: 24px;
 $base-spacing: $base-font-size;
+$base-width: 89%;
+
+$header-height: 100px;
+$header-height-spacing: 135px;
