--- a/src/containers/PortfolioRoot/index.scss
+++ b/src/containers/PortfolioRoot/index.scss
@@ -3,7 +3,7 @@
 .portfolio-root {
   width: $base-width;
   margin: 0 auto;
-  padding-top: 5%;
+  padding-top: 15px;
   height: 95%;
 
   &__container {
