--- a/src/containers/SideBar/index.scss
+++ b/src/containers/SideBar/index.scss
@@ -11,8 +11,13 @@
   background: white;
   top: $header-height;
   right: 0;
-  display: none;
+  visibility: hidden;
   z-index: 2;
+  transition-property: visibility;
+  transition-duration: .5s;
+  animation-name: slide-out;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
 
   &__container {
     width: $base-width;
@@ -23,7 +28,10 @@
   }
 
   &--showing {
-    display: block;
+    visibility: visible;
+    animation-name: slide;
+    animation-duration: .5s;
+    animation-fill-mode: both;
   }
 
   &__project {
@@ -33,4 +41,22 @@
       font-weight: bold;
     }
   }
+}
+
+@-webkit-keyframes slide-out {
+	from {
+	  left: 0;
+	}
+	to {
+    left: 100%;
+	}
+}
+
+@-webkit-keyframes slide {
+	from {
+		left: 100%
+	}
+	to {
+		left: 0
+	}
 }
