--- a/src/containers/SideBar/index.scss
+++ b/src/containers/SideBar/index.scss
@@ -15,9 +15,14 @@
   z-index: 2;
   transition-property: visibility;
   transition-duration: .5s;
-  animation-name: slide-out;
+  animation-name: slide-out-mobile;
   animation-duration: .5s;
   animation-fill-mode: forwards;
+
+  @media screen and (min-width: 600px) {
+    width: 60%;
+    animation-name: slide-out-tablet;
+  }
 
   &__container {
     width: $base-width;
@@ -29,9 +34,13 @@
 
   &--showing {
     visibility: visible;
-    animation-name: slide;
+    animation-name: slide-mobile;
     animation-duration: .5s;
     animation-fill-mode: both;
+
+    @media screen and (min-width: 600px) {
+      animation-name: slide-tablet;
+    }
   }
 
   &__project {
@@ -43,7 +52,7 @@
   }
 }
 
-@-webkit-keyframes slide-out {
+@-webkit-keyframes slide-out-mobile {
   from {
     left: 0;
   }
@@ -52,11 +61,29 @@
   }
 }
 
-@-webkit-keyframes slide {
+@-webkit-keyframes slide-mobile {
   from {
     left: 100%
   }
   to {
     left: 0
+  }
+}
+
+@-webkit-keyframes slide-out-tablet {
+  from {
+    right: 0
+  }
+  to {
+    right: -60%;
+  }
+}
+
+@-webkit-keyframes slide-tablet {
+  from {
+    right: -60%;
+  }
+  to {
+    right: 0;
   }
 }
