necessary mobile style changes

--- a/src/containers/Header/index.scss
+++ b/src/containers/Header/index.scss
@@ -14,7 +14,7 @@
     margin: 22px auto 0;
     font-size: 24px;
     font-weight: bold;
-    width: ($base-width - 2%);
+    width: 98%;
     height: 100%;
   }
 
