--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ html,
 body,
 .main,
 .app {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   font-size: $base-font-size;
   font-family: "georgia";
