--- a/src/containers/PortfolioRoot/index.scss
+++ b/src/containers/PortfolioRoot/index.scss
@@ -4,11 +4,11 @@
   width: $base-width;
   margin: 0 auto;
   padding-top: 15px;
+  overflow: scroll;
   height: 100%;
   position: relative;
 
   &__container {
-    background: lightblue;
     height: 100%;
   }
 }
