--- a/src/containers/PortfolioRoot/index.scss
+++ b/src/containers/PortfolioRoot/index.scss
@@ -1,14 +1,35 @@
 @import "../../variables";
 
 .portfolio-root {
-  width: $base-width;
-  margin: 0 auto;
+  width: 100%;
   padding-top: 15px;
   overflow: scroll;
   height: 100%;
   position: relative;
 
+  @media screen and (min-width: 600px) {
+    padding-top: ($header-height__tablet * .48);
+  }
+
   &__container {
+    margin-left: 5.5%;
+    margin-right: 5.5%;
+    width: $base-width;
     height: 100%;
+    transition-property: margin-left, margin-right, width;
+    transition-duration: .5s, .5s, .5s;
+
+    @media screen and (min-width: 600px) {
+      &--pushed {
+        margin-left: -49%;
+        margin-right: 60%;
+        transition-property: margin-left, margin-right, width;
+        transition-duration: .5s, .5s, .5s;
+      }
+    }
+  }
+
+  @media screen and (min-width: 600px) {
+    overflow: initial;
   }
 }
