--- a/src/containers/ProjectDashboard/index.scss
+++ b/src/containers/ProjectDashboard/index.scss
@@ -3,10 +3,19 @@
 .project-dashboard {
   height: 100%;
 
+  @media screen and (min-width: 600px) {
+    height: 935px;
+  }
+
   &__image {
     height: 20%;
     width: 100%;
     position: relative;
+
+    @media screen and (min-width: 600px) {
+      width: 90%;
+      margin-left: -(((100% - $base-width) * .5) + 6%);
+    }
   }
 
   &__laptop {
@@ -30,4 +39,9 @@
   width: 88%;
   margin: 0 auto;
   padding-top: $header-height-spacing;
+
+  @media screen and (min-width: 600px) {
+    padding-top: $header-height-spacing__tablet;
+    overflow: initial;
+  }
 }
