--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,4 +3,7 @@ $base-spacing: $base-font-size;
 $base-width: 89%;
 
 $header-height: 100px;
+$header-height__tablet: $header-height + 5px;
 $header-height-spacing: 135px;
+$header-height-spacing__tablet: ($header-height__tablet * 1.5);
+
