added some extra tests and styled out desktop view

--- a/src/containers/Header/index.scss
+++ b/src/containers/Header/index.scss
@@ -24,6 +24,10 @@
     @media screen and (min-width: 600px) {
       width: 93.7%;
     }
+
+    @media screen and (min-width: 768px) {
+      width: $base-width;
+    }
   }
 
   &__line {
@@ -34,15 +38,6 @@
     border: none;
   }
 
-  &__menu {
-    margin-top: 12px;
-    min-width: 120px;
-
-    &:hover {
-      cursor: pointer
-    }
-  }
-
   &__name {
     max-width: 100px;
 
@@ -51,10 +46,4 @@
       max-width: 500px;
     }
   }
-}
-
-i.fa-bars {
-  font-size: 36px;
-  margin-top: -3px;
-  color: black;
 }
