--- a/src/containers/SideBar/index.scss
+++ b/src/containers/SideBar/index.scss
@@ -17,13 +17,19 @@
   animation-name: slide-out-mobile;
   transition-property: visibility, width;
   transition-duration: .5s, .5s;
+  transition-timing-function: initial, ease-in;
   animation-duration: .5s;
   animation-fill-mode: forwards;
 
   @media screen and (min-width: 600px) {
     top: $header-height__tablet;
-    transition-duration: 3s;
+    transition-duration: .5s, 0;
+    transition-delay: 0s, .5s;
     animation-name: slide-out-tablet;
+  }
+
+  @media screen and (min-width: 768px) {
+    animation-name: slide-out-desktop;
   }
 
   &__container {
@@ -33,6 +39,10 @@
     list-style: none;
     padding: 0;
     margin-top: 20px;
+
+    @media screen and (min-width: 768px) {
+      width: ($base-width * .65);
+    }
   }
 
   &--showing {
@@ -41,11 +51,18 @@
     animation-name: slide-mobile;
     animation-duration: .5s;
     transition-property: width;
+    // transition-delay: .5s;
     transition-duration: .2s;
 
     @media screen and (min-width: 600px) {
       width: 60%;
       animation-name: slide-tablet;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 35%;
+      animation-name: slide-desktop;
+      transition-duration: 0s;
     }
   }
 
@@ -72,13 +89,13 @@
     left: 100%
   }
   to {
-    left: 0
+    left: 0;
   }
 }
 
 @-webkit-keyframes slide-out-tablet {
   from {
-    right: 0
+    right: 0;
   }
   to {
     right: -60%;
@@ -88,6 +105,24 @@
 @-webkit-keyframes slide-tablet {
   from {
     right: -60%;
+  }
+  to {
+    right: 0;
+  }
+}
+
+@-webkit-keyframes slide-out-desktop {
+  from {
+    right: 0;
+  }
+  to {
+    right: -35%;
+  }
+}
+
+@-webkit-keyframes slide-desktop {
+  from {
+    right: -35%;
   }
   to {
     right: 0;
