--- a/src/containers/SideBar/index.scss
+++ b/src/containers/SideBar/index.scss
@@ -22,6 +22,7 @@
   animation-fill-mode: forwards;
 
   @media screen and (min-width: 600px) {
+    height: initial;
     top: $header-height__tablet;
     transition-duration: .5s, 0;
     transition-delay: 0s, .5s;
@@ -51,7 +52,6 @@
     animation-name: slide-mobile;
     animation-duration: .5s;
     transition-property: width;
-    // transition-delay: .5s;
     transition-duration: .2s;
 
     @media screen and (min-width: 600px) {
