--- a/src/containers/ProjectDashboard/index.scss
+++ b/src/containers/ProjectDashboard/index.scss
@@ -4,9 +4,9 @@
 .project-dashboard {
   height: 100%;
 
-  @media screen and (min-width: 600px) {
-    height: 935px;
-  }
+  // @media screen and (min-width: 600px) {
+  //   height: 935px;
+  // }
 
   &__image {
     height: 20%;
