--- a/src/containers/SideBar/index.scss
+++ b/src/containers/SideBar/index.scss
@@ -1,130 +1,107 @@
 @import "../../variables";
 
-.active {
-  font-weight: bold;
-}
-
 .side-bar {
   position: absolute;
   height: 100%;
-  width: 0;
-  overflow: scroll;
+  width: 5.5%;
   background: white;
+  z-index: 3;
   top: $header-height;
   right: 0;
-  visibility: hidden;
-  z-index: 2;
-  animation-name: slide-out-mobile;
-  transition-property: visibility, width;
-  transition-duration: .5s, .5s;
-  transition-timing-function: initial, ease-in;
-  animation-duration: .5s;
-  animation-fill-mode: forwards;
+  transition-property: width;
+  transition-duration: .5s;
 
   @media screen and (min-width: 600px) {
-    height: initial;
     top: $header-height__tablet;
-    transition-duration: .5s, 0;
-    transition-delay: 0s, .5s;
-    animation-name: slide-out-tablet;
+    height: calc(100% - (105px * 1.5));
   }
 
   @media screen and (min-width: 768px) {
-    animation-name: slide-out-desktop;
-  }
-
-  &__container {
-    height: 100%;
-    width: $base-width;
-    margin: 0 auto;
-    list-style: none;
-    padding: 0;
-    margin-top: 20px;
-
-    @media screen and (min-width: 768px) {
-      width: ($base-width * .65);
-    }
+    height: calc(85vh - (105px * .5));
   }
 
   &--showing {
     width: 100%;
-    visibility: visible;
-    animation-name: slide-mobile;
-    animation-duration: .5s;
     transition-property: width;
-    transition-duration: .2s;
+    transition-duration: .5s;
 
     @media screen and (min-width: 600px) {
-      width: 60%;
-      animation-name: slide-tablet;
+      width: 400px;
+    }
+  }
+
+  &__container {
+    overflow: scroll;
+    visibility: hidden;
+    height: 100%;
+    width: 0%;
+    right: -300px;
+    position: absolute;
+    transition-property: right, visibility, width;
+    transition-duration: .5s, 0s, 0s;
+    transition-delay: 0s, .5s, .5s;
+
+    @media screen and (min-width: 600px) {
+      height: 98%;
+      padding-bottom: 2%;
+      margin: initial;
     }
 
-    @media screen and (min-width: 768px) {
-      width: 35%;
-      animation-name: slide-desktop;
-      transition-duration: 0s;
+    &--showing {
+      min-width: 200px;
+      width: $base-width;
+      right: 5.5%;
+      visibility: visible;
+      transition-property: right;
+      transition-duration: .5s;
+
+      @media screen and (min-width: 600px) {
+        right: 50px;
+        width: 300px;
+      }
     }
   }
 
   &__project {
-    margin-bottom: 20px;
+    margin-bottom: $base-font-size;
+    font-size: 18px;
 
-    &:hover {
+    &:hover,
+    &--active {
       font-weight: bold;
     }
   }
-}
 
-@-webkit-keyframes slide-out-mobile {
-  from {
-    left: 0;
-  }
-  to {
-    left: 100%;
-  }
-}
+  &__bullets {
+    margin: 0;
+    margin-left: -11px;
+    z-index: 2;
+    width: 20%;
 
-@-webkit-keyframes slide-mobile {
-  from {
-    left: 100%
-  }
-  to {
-    left: 0;
-  }
-}
+    @media screen and (min-width: 600px) {
+      height: 98%;
+      padding-bottom: 2%;
+    }
 
-@-webkit-keyframes slide-out-tablet {
-  from {
-    right: 0;
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
   }
-  to {
-    right: -60%;
-  }
-}
 
-@-webkit-keyframes slide-tablet {
-  from {
-    right: -60%;
-  }
-  to {
-    right: 0;
-  }
-}
+  &__bullet {
+    height: 15px;
+    width: 15px;
+    border: 3px solid black;
+    margin-bottom: $base-font-size;
+    transition-property: border-radius;
+    transition-duration: .5s;
+    cursor: pointer;
 
-@-webkit-keyframes slide-out-desktop {
-  from {
-    right: 0;
-  }
-  to {
-    right: -35%;
-  }
-}
-
-@-webkit-keyframes slide-desktop {
-  from {
-    right: -35%;
-  }
-  to {
-    right: 0;
+    &:hover,
+    &--active {
+      border-radius: 50%;
+      transition-property: border-radius;
+      transition-duration: .5s;
+    }
   }
 }
