--- a/src/containers/ProjectDashboard/index.scss
+++ b/src/containers/ProjectDashboard/index.scss
@@ -3,6 +3,7 @@
 
 .project-dashboard {
   height: 100%;
+  font-family: "aktiv-grotesk";
 
   &__image {
     height: 20%;
@@ -15,7 +16,7 @@
     }
 
     @media screen and (min-width: 768px) {
-      margin-left: -(((100% - $base-width) * .5) + 4%);
+      margin-left: -(((100% - $base-width) * 1.5));
     }
   }
 
