--- a/src/components/ProjectDashboard/index.scss
+++ b/src/components/ProjectDashboard/index.scss
@@ -40,6 +40,7 @@
   }
 
   &__container {
+    min-height: calc(100vh - 96px - 70px);
     overflow: scroll;
     width: 88%;
     margin: 0 auto;
@@ -52,6 +53,7 @@
 
     @media screen and (min-width: 768px) {
       @include row;
+      padding-top: ($header-height-spacing__tablet * 1.17);
       justify-content: space-between;
       min-height: 60vh;
     }
