--- a/src/components/SideBar/SideBarContainer/index.scss
+++ b/src/components/SideBar/SideBarContainer/index.scss
@@ -5,28 +5,36 @@
     overflow: scroll;
     visibility: hidden;
     height: 100%;
+    min-width: 0%;
     width: 0%;
-    right: -300px;
+    right: -96vw;
+    margin-top: ($base-font-size + 8px);
     position: absolute;
-    transition-property: right, visibility, width;
-    transition-duration: .5s, 0s, 0s;
-    transition-delay: 0s, .5s, .5s;
+    transition-property: right, visibility, min-width, width;
+    transition-duration: .5s, 0s, 0s, 0s;
+    transition-delay: 0s, .5s, .5s, .5s;
 
     @media screen and (min-width: 600px) {
+      right: -300px;
+      margin-left: 0;
       height: 98%;
       padding-bottom: $side-bar-padding;
       margin: initial;
+      justify-content: center;
     }
 
     &--showing {
-      min-width: 200px;
-      width: $base-width;
-      right: 5.5%;
+      min-width: 88vw;
+      width: ($base-width - 4%);
+      right: ((100% - ($base-width - 4%)) * .5);
       visibility: visible;
-      transition-property: right;
-      transition-duration: .5s;
+      transition-property: width, right;
+      transition-duration: 0s, .5s;
+      transition-delay: .5s, 0s;
 
       @media screen and (min-width: 600px) {
+        min-width: 200px;
+        transition-delay: 0s, 0s;
         right: 50px;
         width: 300px;
       }
