--- a/src/components/SideBar/index.scss
+++ b/src/components/SideBar/index.scss
@@ -2,7 +2,7 @@
 
 .side-bar {
   position: absolute;
-  height: 100%;
+  max-height: 20%;
   width: ((100% - $base-width) * .5);
   background: white;
   z-index: 3;
@@ -17,10 +17,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    height: calc(85vh - (105px * .5));
+    height: calc(83% - (105px * .5));
   }
 
   &--showing {
+    max-height: 100%;
     width: 100%;
     transition-property: width;
     transition-duration: .5s;
