--- a/src/components/ProjectDashboard/index.scss
+++ b/src/components/ProjectDashboard/index.scss
@@ -8,7 +8,6 @@
   &__image {
     height: 20%;
     width: 100%;
-    position: relative;
 
     @media screen and (min-width: 600px) {
       width: 90%;
@@ -20,22 +19,12 @@
       margin-left: -(((100% - $base-width) * 1.5));
     }
 
-    @media screen and (min-width: 1280px) {
-      margin-top: 0;
+    @media screen and (min-width: 768px) and (min-height: 800px) and (max-width: 1180px) {
+      margin-top: 10vh;
     }
-  }
 
-  &__laptop {
-    width: 100%;
-
-    &__overlay {
-      position: absolute;
-      height: 70.4%;
-      width: 67.85%;
-      top: 5.2%;
-      left: 15.5%;
-      background-size: 100% 100%;
-      background-repeat: no-repeat;
+    @media screen and (min-width: 1440px) {
+      margin-top: 2vh;
     }
   }
 
@@ -53,9 +42,9 @@
 
     @media screen and (min-width: 768px) {
       @include row;
-      padding-top: ($header-height-spacing__tablet * 1.17);
       justify-content: space-between;
-      min-height: 60vh;
+      height: 60vh;
+      min-height: 0px;
     }
   }
 }
