--- a/src/components/SideBar/Bullets/index.scss
+++ b/src/components/SideBar/Bullets/index.scss
@@ -5,12 +5,17 @@
     margin: 0;
     margin-left: -11px;
     z-index: 2;
-    width: 20%;
 
     @media screen and (min-width: 600px) {
-      height: 98%;
+      height: $dashboard-height;
       margin-top: 2px;
-      padding-bottom: $side-bar-padding;
+      padding-top: $header-height__tablet;
+      min-width: 21px;
+      visibility: hidden;
+
+      &--on-homepage {
+        visibility: visible;
+      }
     }
 
     @media screen and (max-width: 600px) {
