--- a/src/components/ProjectPage/Footer/index.scss
+++ b/src/components/ProjectPage/Footer/index.scss
@@ -1,30 +1,42 @@
 @import "../../../variables";
 
 .project-page__footer {
-  height: 126px;
+  height: 75px;
   width: 100%;
 
+  @media screen and (min-width: 600px) {
+    height: 126px;
+  }
+
   &__project {
-    width: 49.5%;
+    width: 100%;
     height: 100%;
     // temporary until I actually add in images
     background: lightpink;
     position: relative;
 
+    @media screen and (min-width: 600px) {
+      width: 49.5%;
+    }
+
     &__link {
       &__container {
         background: white;
-        width: 25%;
+        width: ($base-width - 8%);
         height: ($base-font-size + 2px);
-        padding: ($base-font-size * 2);
         padding-bottom: ($base-font-size * .65);
         padding-top: ($base-font-size * .35);
         overflow: hidden;
         position: absolute;
-        top: ($base-font-size * 2);
         font-weight: bold;
         font-family: $base-font-family;
         border-radius: 3% / 15%;
+        top: calc((75px - 42px) * .5);
+
+        @media screen and (min-width: 600px) {
+          width: 35%;
+          top: ($base-font-size * 2);
+        }
       }
 
       &__title {
@@ -36,7 +48,11 @@
 
     &:first-child {
       .project-page__footer__project__link__container {
-        left: ($base-font-size * 1.5);
+        left: ((100% - ($base-width - 8%)) * .5);
+
+        @media screen and (min-width: 600px) {
+          left: ($base-font-size * 1.5);
+        }
       }
     }
 
