--- a/src/components/ProjectPage/SidePanel/index.scss
+++ b/src/components/ProjectPage/SidePanel/index.scss
@@ -2,7 +2,21 @@
 
 .project-page__side-panel {
   height: 100%;
-  width: 28%;
+  width: 100%;
+  padding-top: ($base-font-size * 1.5);
+  padding-bottom: ($base-font-size * 2);
+
+  @media screen and (min-width: 600px) {
+    padding-top: 0;
+    padding-bottom: 0;
+    width: 28%;
+  }
+
+  &__link {
+    @media screen and (max-width: 600px) {
+      width: 100%;
+    }
+  }
 
   &__lines {
     width: 100%;
