--- a/src/containers/PortfolioRoot/index.scss
+++ b/src/containers/PortfolioRoot/index.scss
@@ -18,14 +18,14 @@
   }
 
   &__container {
-    margin-left: ((100% - $base-width) * .5);
-    margin-right: ((100% - $base-width) * .5);
-    width: $base-width;
+    width: ($base-width - 8%);
+    margin: 0 auto;
     height: 100%;
     transition-property: margin-left, margin-right, width;
     transition-duration: .5s, .5s, .5s;
 
     @media screen and (min-width: 600px) {
+      width: $base-width;
       &--pushed {
         margin-left: (calc(-400px + 6%));
         transition-property: margin-left, width;
