--- a/src/containers/ProjectPage/index.scss
+++ b/src/containers/ProjectPage/index.scss
@@ -1,20 +1,25 @@
 @import "../../variables";
+@import "../../mixins/index";
 
 .project-page {
   min-height: 100%;
   width: 100%;
 
   &__container {
-    margin: 0 auto;
     padding: ($base-font-size * 3) 0;
-    width: 86%;
+    margin: 0 auto;
+    width: 90%;
   }
 
   &__header-image{
     // temporary until I actually add in images
     background: lightblue;
     width: 100%;
-    height: 600px;
+    height: 90vw;
+
+    @media screen and (min-width: 600px) {
+      height: 600px;
+    }
   }
 
   @media screen and (min-width: 600px) {
