--- a/src/index.scss
+++ b/src/index.scss
@@ -68,10 +68,10 @@ ul {
   height: ($base-font-size * 1.80);
   color: white;
   background: $base-black;
-  font-weight: bold;
   font-family: $base-font-family;
   padding-top: ($base-font-size * .2);
   border-radius: 3% / 15%;
+  letter-spacing: 1px;
 
   &__text {
     margin: 0;
