fixed sidebar again

--- a/src/containers/PortfolioRoot/index.scss
+++ b/src/containers/PortfolioRoot/index.scss
@@ -25,11 +25,12 @@
     transition-duration: .5s, .5s, .5s;
 
     @media screen and (min-width: 600px) {
+      margin-left: ((100% - $base-width) * .5);
+      margin-right: ((100% - $base-width) * .5);
       width: $base-width;
+
       &--pushed {
         margin-left: (calc(-400px + 6%));
-        transition-property: margin-left, width;
-        transition-duration: .5s, .5s;
       }
     }
   }
