updated almost all reducer tests. Added new reducer in. Changed data flow of images. Added picture styling, mainly carousel imaging

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,9 +23,14 @@ body,
   justify-content: space-between;
 }
 
-.row-right {
+.row-end {
   @include row;
   justify-content: flex-end;
+}
+
+.row-start {
+  @include row;
+  justify-content: flex-start;
 }
 
 .row-center {
