--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@ $base-spacing: $base-font-size;
 $base-width: 94%;
 $base-black: #333;
 $base-gray: #D8D8D8;
+$base-dark-gray: #979797;
 $base-line-height: 1.4;
 $base-font-family: "abril-text";
 
