--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -1,10 +1,32 @@
 @import "../../variables";
 
+.carousel-slide {
+  width: 100%;
+  height: 100%;
+
+  &__image {
+    width: 100%;
+
+    .device-image__laptop__overlay {
+      height: 74.8%;
+    }
+  }
+
+  &__caption {
+    padding-left: 2px;
+    margin-top: ($base-font-size * 1.5);
+  }
+}
+
 .slick-slider {
   height: 400px;
   width: 100%;
-  // temporary until I actually add in images
-  background: lightgreen;
+  margin-bottom: 0;
+  padding: ($base-font-size * 1.5) 0 0;
+  overflow: scroll;
+  font-family: $alt-font-family;
+  font-size: $base-font-size;
+  font-weight: 500;
 }
 
 .slick-dots {
