--- a/src/components/DeviceImage/index.scss
+++ b/src/components/DeviceImage/index.scss
@@ -10,12 +10,23 @@
 
     &__overlay {
       position: absolute;
-      height: 70.4%;
-      width: 67.85%;
+      background: $base-black;
+      height: 71.8%;
+      width: 68.85%;
       top: 5.2%;
-      left: 15.5%;
+      left: 14.8%;
       background-size: 100% 100%;
       background-repeat: no-repeat;
+
+      @media screen and (min-width: 600px) {
+        height: 72.8%;
+      }
+
+      @media screen and (min-width: 768px) {
+        width: 68.45%;
+        top: 1.5vw;
+        height: 23.3vw;
+      }
     }
   }
 }
