--- a/src/components/ProjectPage/Footer/index.scss
+++ b/src/components/ProjectPage/Footer/index.scss
@@ -14,6 +14,8 @@
     // temporary until I actually add in images
     background: lightpink;
     position: relative;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 
     @media screen and (min-width: 600px) {
       width: 49.5%;
