--- a/src/containers/ProjectPage/index.scss
+++ b/src/containers/ProjectPage/index.scss
@@ -16,6 +16,8 @@
     background: lightblue;
     width: 100%;
     height: 90vw;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 
     @media screen and (min-width: 600px) {
       height: 600px;
