--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -7,19 +7,28 @@
   &__image {
     width: 100%;
 
+    @media screen and (min-width: 600px) {
+      margin: 0 auto;
+      width: 70%;
+
+      .device-image__laptop__overlay {
+        top: 1.2vw;
+      }
+    }
+
     .device-image__laptop__overlay {
       height: 74.8%;
     }
   }
 
   &__caption {
+    margin-bottom: 0;
     padding-left: 2px;
     margin-top: ($base-font-size * 1.5);
   }
 }
 
 .slick-slider {
-  height: 400px;
   width: 100%;
   margin-bottom: 0;
   padding: ($base-font-size * 1.5) 0 0;
@@ -27,6 +36,11 @@
   font-family: $alt-font-family;
   font-size: $base-font-size;
   font-weight: 500;
+
+  @media screen and (max-width: 600px) {
+    overflow: scroll;
+    height: 400px;
+  }
 }
 
 .slick-dots {
