--- a/src/containers/ProjectPage/index.scss
+++ b/src/containers/ProjectPage/index.scss
@@ -16,6 +16,7 @@
     height: 90vw;
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    position: relative;
 
     @media screen and (min-width: 600px) {
       height: 600px;
