--- a/src/components/ProjectDashboard/index.scss
+++ b/src/components/ProjectDashboard/index.scss
@@ -4,6 +4,8 @@
 .project-dashboard {
   height: 100%;
   font-family: "aktiv-grotesk";
+  transition-property: background;
+  transition-duration: .5s;
 
   &__image {
     width: 100%;
