--- a/src/index.scss
+++ b/src/index.scss
@@ -101,3 +101,10 @@ ul {
     display: none;
   }
 }
+
+.background-image {
+  background: $base-gray;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
