--- a/src/components/SideBar/Container/index.scss
+++ b/src/components/SideBar/Container/index.scss
@@ -56,6 +56,7 @@
 
       @media screen and (min-width: 600px) {
         margin-bottom: ($base-font-size * .5);
+        width: 65%;
       }
     }
   }
