--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,11 @@
-$base-font-size: 20px;
+$base-font-size: 16px;
 $base-spacing: $base-font-size;
 $base-width: 94%;
 $base-black: #333;
 $base-gray: #D8D8D8;
 $base-dark-gray: #979797;
-$base-line-height: 1.4;
+$base-blue: blue;
+$base-line-height: 1.3;
 $base-font-family: "abril-text";
 
 $alt-font-family: "aktiv-grotesk";
