added about sidebar issues

--- a/src/components/MenuBar/index.scss
+++ b/src/components/MenuBar/index.scss
@@ -19,6 +19,10 @@
     margin-right: ($base-font-size * .5);
   }
 
+  &__about-me {
+    width: ($base-font-size * 7.5);
+  }
+
   &__icon {
     width: 36%;
     margin-top: -23px;
