--- a/src/components/AboutMe/Info/index.scss
+++ b/src/components/AboutMe/Info/index.scss
@@ -7,6 +7,7 @@
   @media screen and (min-width: 600px) {
     padding-bottom: 0;
     margin-left: ($base-font-size * 3);
+    overflow: scroll;
   }
 
   &__title {
