--- a/src/containers/AboutMe/index.scss
+++ b/src/containers/AboutMe/index.scss
@@ -23,7 +23,7 @@
     bottom: 0;
     right: 0;
     position: absolute;
-    opacity: 0.14;
+    opacity: 0.34;
     z-index: 0;
 
     @media screen and (min-width: 600px) {
@@ -40,6 +40,7 @@
     left: 4%;
 
     @media screen and (min-width: 600px) {
+      box-shadow: 0px 0px 10px 1px rgba(51,51,51,0.80);
       left: calc((100% - (69.5% + 140px)) / 2);
       width: 69.5%;
       height: 400px;
