--- a/src/components/ProjectPage/SidePanel/index.scss
+++ b/src/components/ProjectPage/SidePanel/index.scss
@@ -13,8 +13,13 @@
   }
 
   &__link {
+    margin-bottom: $base-font-size;
+
     @media screen and (max-width: 600px) {
       width: 100%;
+    }
+
+    &__name {
     }
   }
 
