--- a/src/components/ProjectDashboard/Info/index.scss
+++ b/src/components/ProjectDashboard/Info/index.scss
@@ -5,6 +5,10 @@
 
   @media screen and (min-width: 600px) {
     width: 57%;
+
+    &--mobile {
+      width: 100%;
+    }
   }
 
   @media screen and (min-width: 768px) {
