--- a/src/components/ProjectDashboard/index.scss
+++ b/src/components/ProjectDashboard/index.scss
@@ -10,22 +10,24 @@
   &__image {
     width: 100%;
 
-    @media screen and (min-width: 600px) {
-      width: 90%;
-      margin-left: -(((100% - $base-width) * .5) + 6%);
-    }
+    &--desktop {
+      @media screen and (min-width: 600px) {
+        width: 90%;
+        margin-left: -(((100% - $base-width) * .5) + 6%);
+      }
 
-    @media screen and (min-width: 768px) {
-      margin-top: 5vh;
-      margin-left: -(((100% - $base-width) * 1.5));
-    }
+      @media screen and (min-width: 768px) {
+        margin-top: 5vh;
+        margin-left: -(((100% - $base-width) * 1.5));
+      }
 
-    @media screen and (min-width: 768px) and (min-height: 800px) and (max-width: 1180px) {
-      margin-top: 10vh;
-    }
+      @media screen and (min-width: 768px) and (min-height: 800px) and (max-width: 1180px) {
+        margin-top: 10vh;
+      }
 
-    @media screen and (min-width: 1440px) {
-      margin-top: 2vh;
+      @media screen and (min-width: 1440px) {
+        margin-top: 2vh;
+      }
     }
   }
 
