--- a/src/containers/ProjectPage/index.scss
+++ b/src/containers/ProjectPage/index.scss
@@ -15,8 +15,11 @@
     width: 100%;
     height: 338px;
     position: relative;
+    background-size: 300% 100%;
+    background-position: left;
 
     @media screen and (min-width: 600px) {
+      background-size: cover;
       height: 500px;
     }
   }
