a couple quick fixes

--- a/src/components/ProjectPage/Footer/index.scss
+++ b/src/components/ProjectPage/Footer/index.scss
@@ -38,9 +38,13 @@
 
       &__title {
         margin-bottom: 0;
-        height: 100%;
+        height: ($base-font-size * 1.5);
         overflow: hidden;
         text-align: center;
+
+        @media screen and (min-width: 600px) {
+          height: 100%;
+        }
       }
     }
 
