--- a/src/components/ProjectDashboard/Info/index.scss
+++ b/src/components/ProjectDashboard/Info/index.scss
@@ -3,10 +3,8 @@
 .project-dashboard__project-info {
   margin-top: 6px;
 
-  // TODO
   @media screen and (min-width: 600px) {
-    width: 57%;
-    // width: 51%;
+    width: 51%;
 
     &--mobile {
       width: 100%;
@@ -39,15 +37,11 @@
 
   &__view-project {
     margin-top: $base-font-size;
+    transition-property: background;
+    transition-duration: .3s;
 
     @media screen and (min-width: 768px) {
       font-weight: 700;
-    }
-
-    &:hover {
-      background: $base-black;
-      // transition-property: background;
-      // transition-duration: .5s;
     }
   }
 }
