--- a/src/mixins/index.scss
+++ b/src/mixins/index.scss
@@ -7,3 +7,12 @@
   display: flex;
   flex-direction: column;
 }
+
+@mixin link {
+  font-weight: bold;
+  font-family: $base-font-family;
+
+  &:hover {
+    cursor: pointer
+  }
+}
