--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,7 +1,10 @@
+@import "./mixins/index";
+
 $base-font-size: 16px;
 $base-spacing: $base-font-size;
 $base-width: 94%;
 $base-black: #222;
+$base-white: #FFF;
 $base-gray: #D8D8D8;
 $base-dark-gray: #979797;
 $base-blue: blue;
