--- a/src/index.scss
+++ b/src/index.scss
@@ -69,17 +69,18 @@ ul {
 }
 
 .button {
+  @include link;
   width: 191px;
   height: ($base-font-size * 1.80);
   color: white;
   background: $base-black;
-  font-family: $base-font-family;
   padding-top: ($base-font-size * .25);
   border-radius: 3% / 15%;
   letter-spacing: 1px;
 
   &__text {
     margin: 0;
+    margin-top: 1px;
   }
 }
 
@@ -110,7 +111,5 @@ ul {
 }
 
 .link {
-  &:hover {
-    cursor: pointer
-  }
+  @include link;
 }
