--- a/src/components/SideBar/Container/index.scss
+++ b/src/components/SideBar/Container/index.scss
@@ -72,6 +72,7 @@
     }
 
     @media screen and (min-width: 600px) {
+      margin-bottom: 21px;
       overflow: hidden;
       height: ($base-font-size * 1.5);
       font-size: ($base-font-size * .9);
