changed hover effect

--- a/src/components/ProjectPage/SidePanel/index.scss
+++ b/src/components/ProjectPage/SidePanel/index.scss
@@ -19,8 +19,7 @@
     transition-duration: .3s;
 
     &:hover {
-      background: $base-white;
-      color: $base-black;
+      color: $base-gray;
     }
 
     @media screen and (max-width: 600px) {
