--- a/src/mixins/index.scss
+++ b/src/mixins/index.scss
@@ -16,3 +16,19 @@
     cursor: pointer
   }
 }
+
+@mixin button {
+  @include link;
+  width: 191px;
+  height: ($base-font-size * 1.80);
+  color: white;
+  background: $base-black;
+  padding-top: ($base-font-size * .25);
+  border-radius: 3% / 15%;
+  letter-spacing: 1px;
+
+  &__text {
+    margin: 0;
+    margin-top: 1px;
+  }
+}
