--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -28,7 +28,7 @@
 
     @media screen and (min-width: 768px) {
       font-size: ($base-font-size * 1.25);
-      width: $base-width;
+      width: $header-width;
     }
   }
 
