--- a/src/components/ProjectDashboard/index.scss
+++ b/src/components/ProjectDashboard/index.scss
@@ -55,6 +55,8 @@
       justify-content: space-between;
       height: 60vh;
       min-height: 0px;
+      width: 94%;
+      padding-right: 3%;
     }
   }
 }
