--- a/src/containers/AboutMe/index.scss
+++ b/src/containers/AboutMe/index.scss
@@ -1,9 +1,10 @@
 @import "../../variables";
 
 .about-me {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 92px);
+  min-height: calc(100vh - 70px);
   padding-top: calc((97px - 15px) + ((100% - 88%) * .5));
   position: relative;
   z-index: 0;
