--- a/src/containers/PortfolioRoot/index.scss
+++ b/src/containers/PortfolioRoot/index.scss
@@ -1,6 +1,7 @@
 @import "../../variables";
 
 .portfolio-root {
+  box-sizing: border-box;
   width: 100%;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -9,27 +10,28 @@
   position: relative;
 
   @media screen and (min-width: 600px) {
-    padding-top: ($header-height__tablet * .45);
-    padding-bottom: ($header-height__tablet * .45);
+    padding-top: 34px;
+    padding-bottom: 34px;
   }
 
   @media screen and (min-width: 768px) {
-    height: calc(100vh - 97px);
+    height: 100vh;
   }
 
   &__container {
-    width: $base-width;
+    width: calc(100% - 30px);
     margin: 0 auto;
     height: 100%;
     transition-property: margin-left, margin-right, width;
     transition-duration: .5s, .5s, .5s;
 
     @media screen and (min-width: 600px) {
-      margin-left: ((100% - $base-width) * .5);
-      margin-right: ((100% - $base-width) * .5);
+      width: calc(100% - 68px);
+      margin-left: 34px;
+      margin-right: 34px;
 
       &--pushed {
-        margin-left: (calc(-400px + 6%));
+        margin-left: -400px + 68px;
       }
     }
   }
