--- a/src/containers/AboutMe/index.scss
+++ b/src/containers/AboutMe/index.scss
@@ -14,7 +14,7 @@
   }
 
   @media screen and (min-width: 600px) {
-    padding-top: 27vh;
+    padding-top: 22vh;
   }
 
   &::after {
@@ -44,7 +44,8 @@
       box-shadow: 0px 0px 10px 1px rgba(51,51,51,0.80);
       left: calc((100% - (69.5% + 140px)) / 2);
       width: 69.5%;
-      height: 400px;
+      height: initial;
+      max-height: 400px;
       padding: 50px 70px;
       display: flex;
       flex-direction: row;
