--- a/src/containers/AboutMe/index.scss
+++ b/src/containers/AboutMe/index.scss
@@ -44,6 +44,7 @@
       box-shadow: 0px 0px 10px 1px rgba(51,51,51,0.80);
       left: calc((100% - (69.5% + 140px)) / 2);
       width: 69.5%;
+      // max-width: 800px;
       height: initial;
       max-height: 400px;
       padding: 50px 70px;
